--- a/Site/sass/cadastro.css
+++ b/Site/sass/cadastro.css
@@ -1,3 +1,11 @@
+.material-icons.md-30 {
+  font-size: 30px;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0 auto;
   background-color: #F5F5F5;
@@ -26,7 +34,8 @@ header {
 }
 
 nav {
-  margin-top: 17px;
+  margin: 0;
+  margin-top: 10px;
 }
 
 nav a {
@@ -59,16 +68,17 @@ nav a:first-of-type {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background-color: #0BBAB3;
-  width: 100%;
+  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
   height: 140px;
   border-radius: 0px 0px 20px 20px;
 }
 
-#caixao form {
+#caixao .searchHolder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,13 +121,81 @@ nav a:first-of-type {
   color: #B8B8B8;
 }
 
-#caixao button {
+#enterinvisible {
   height: 30px;
   width: 30px;
   margin: 13px 30px 13px -50px;
   border: none;
   background-color: #E6E6E6;
   padding: 0px;
+}
+
+.conteudoHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 70%;
+}
+
+.linkUsuario, .linkCarrinho {
+  color: white;
+  text-decoration: none;
+}
+
+.linkUsuario img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
+.perfilUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.perfilUsuario h4 {
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.perfilUsuario h4 span {
+  font-weight: lighter;
+}
+
+.carrinhoCompras {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  color: #FFF;
+  background-color: #4E2F00;
 }
 
 #caixinha {
@@ -140,6 +218,84 @@ nav a:first-of-type {
   height: 78px;
   border-radius: 0px 0px 20px 20px;
   top: 120px;
+}
+
+footer {
+  margin-top: 40px;
+}
+
+div.tudinho {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #0BBAB3;
+  border-radius: 20px 20px 0px 0px;
+  height: 130px;
+  padding-top: 40px;
+}
+
+div.tudinho p.dev {
+  font-weight: 600;
+  color: white;
+}
+
+div.tudinho div.textito p.ti {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+div.tudinho div.textito p {
+  margin: 0;
+  color: white;
+  margin-bottom: 5px;
+}
+
+div.tudinho div.redes p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app div.zap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+div.tudinho div.app img.aba {
+  margin-top: -10px;
+  margin-left: -15px;
+}
+
+div.tudinho div.app img.abb {
+  margin-top: 2px;
+  width: 170px;
+  height: 52px;
 }
 
 main {
@@ -205,7 +361,7 @@ main {
   margin-bottom: 45px;
 }
 
-.login input[type=text] {
+.login input[type=text], .login input[type=password] {
   width: 347px;
   height: 43px;
   padding-left: 15px;
@@ -243,7 +399,22 @@ main {
   margin: 20px 30px 12px -40px;
 }
 
-.login div.termos {
+.login .texto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.login .texto input[type=checkbox] {
+  width: 18px;
+  height: 18px;
+}
+
+.login .termosUso {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -254,6 +425,10 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 364px;
 }
 
 .login .loginbotao {
