--- a/Site/sass/home.css
+++ b/Site/sass/home.css
@@ -1,1 +1,548 @@
-/* No CSS *//*# sourceMappingURL=aboutus.css.map */
+.material-icons.md-30 {
+  font-size: 30px;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  margin: 0 auto;
+  background-color: #F5F5F5;
+  font-family: Raleway;
+}
+
+h1 {
+  font-size: 52px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+header {
+  position: relative;
+  height: 218px;
+}
+
+nav {
+  margin: 0;
+  margin-top: 10px;
+}
+
+nav a {
+  margin-left: 140px;
+  color: white;
+  font-size: 23px;
+  text-decoration: none;
+  -webkit-transition: .7s;
+  transition: .7s;
+}
+
+nav a:hover {
+  color: #b8b8b8;
+}
+
+nav a:first-of-type {
+  margin-left: 0px;
+}
+
+#caixao {
+  position: absolute;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #0BBAB3;
+  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
+  height: 140px;
+  border-radius: 0px 0px 20px 20px;
+}
+
+#caixao .searchHolder {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 522px;
+  height: 56px;
+}
+
+#caixao input {
+  margin-left: 53px;
+  width: 100%;
+  height: 100%;
+  border-radius: 28px;
+  border: none;
+  outline: none;
+  font-family: "Raleway", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #575757;
+  background-color: #E6E6E6;
+  padding-left: 30px;
+}
+
+#caixao input::-webkit-input-placeholder {
+  color: #B8B8B8;
+}
+
+#caixao input:-ms-input-placeholder {
+  color: #B8B8B8;
+}
+
+#caixao input::-ms-input-placeholder {
+  color: #B8B8B8;
+}
+
+#caixao input::placeholder {
+  color: #B8B8B8;
+}
+
+#enterinvisible {
+  height: 30px;
+  width: 30px;
+  margin: 13px 30px 13px -50px;
+  border: none;
+  background-color: #E6E6E6;
+  padding: 0px;
+}
+
+.conteudoHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 70%;
+}
+
+.linkUsuario, .linkCarrinho {
+  color: white;
+  text-decoration: none;
+}
+
+.linkUsuario img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
+.perfilUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.perfilUsuario h4 {
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.perfilUsuario h4 span {
+  font-weight: lighter;
+}
+
+.carrinhoCompras {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  color: #FFF;
+  background-color: #4E2F00;
+}
+
+#caixinha {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #4E2F00;
+  width: 100%;
+  height: 78px;
+  border-radius: 0px 0px 20px 20px;
+  top: 120px;
+}
+
+footer {
+  margin-top: 40px;
+}
+
+div.tudinho {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #0BBAB3;
+  border-radius: 20px 20px 0px 0px;
+  height: 130px;
+  padding-top: 40px;
+}
+
+div.tudinho p.dev {
+  font-weight: 600;
+  color: white;
+}
+
+div.tudinho div.textito p.ti {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+div.tudinho div.textito p {
+  margin: 0;
+  color: white;
+  margin-bottom: 5px;
+}
+
+div.tudinho div.redes p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app div.zap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+div.tudinho div.app img.aba {
+  margin-top: -10px;
+  margin-left: -15px;
+}
+
+div.tudinho div.app img.abb {
+  margin-top: 2px;
+  width: 170px;
+  height: 52px;
+}
+
+header {
+  height: 160px;
+}
+
+nav {
+  margin-top: 0;
+}
+
+#caixao {
+  border-radius: 0px;
+}
+
+#caixinha {
+  z-index: 1;
+  height: 55px;
+  border-radius: 20px;
+  top: 120px;
+}
+
+div.home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #0BBAB3;
+  border-radius: 0px 0px 20px 20px;
+  height: 382px;
+}
+
+div.home div.txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 34vw;
+}
+
+div.home div.txt h2 {
+  color: white;
+  font-size: 37px;
+  margin-top: 0px;
+}
+
+div.home div.txt form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 522px;
+  height: 56px;
+}
+
+div.home div.txt input {
+  width: 100%;
+  height: 100%;
+  border-radius: 28px;
+  border: none;
+  outline: none;
+  font-family: "Raleway", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #575757;
+  background-color: #E6E6E6;
+  padding-left: 30px;
+}
+
+div.home div.txt input::-webkit-input-placeholder {
+  color: #B8B8B8;
+}
+
+div.home div.txt input:-ms-input-placeholder {
+  color: #B8B8B8;
+}
+
+div.home div.txt input::-ms-input-placeholder {
+  color: #B8B8B8;
+}
+
+div.home div.txt input::placeholder {
+  color: #B8B8B8;
+}
+
+div.home div.txt button {
+  height: 30px;
+  width: 30px;
+  margin: 13px 30px 13px -50px;
+  border: none;
+  background-color: #E6E6E6;
+  padding: 0px;
+}
+
+div.home div.img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-height: 291px;
+}
+
+div.home div.img img {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin-top: 51px;
+}
+
+.conteudoPrincipal {
+  width: 70%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.recomendados {
+  margin: 0 auto;
+  width: 1150px;
+}
+
+div.produtos {
+  margin: 0 auto;
+  margin-right: -15px;
+  width: 100%;
+}
+
+div.produtos a {
+  color: #000;
+}
+
+.produto {
+  margin-right: 15px;
+  width: 205px;
+  height: 279px;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 20px;
+}
+
+.fundoIMGProduto {
+  -ms-flex-item-align: end;
+      align-self: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 190px;
+  height: 190px;
+  border-radius: 20px;
+  background-color: #64CBC7;
+}
+
+.fundoIMGProduto img {
+  width: 160px;
+  height: 160px;
+}
+
+.textoProduto {
+  -ms-flex-item-align: end;
+      align-self: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 185px;
+  height: 88px;
+}
+
+.textoProduto h4, .textoProduto h5 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.textoProduto h4 {
+  font-size: 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 19px;
+  font-weight: bold;
+}
+
+.textoProduto h5 {
+  font-size: 12px;
+}
+
+div.titulo {
+  margin-left: 200px;
+}
+
+img.imagem {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 1130px;
+  border-radius: 20px;
+}
+
+div.imagem {
+  margin: 0 auto;
+  margin-top: 40px;
+}
+/*# sourceMappingURL=home.css.map */
