--- a/Site/sass/produto.scss
+++ b/Site/sass/produto.scss
@@ -1,234 +1,203 @@
 @import 'template';
 
-div.englobar
-{
-    margin: 0 auto;
-    width:1170px;
-    height:570px;
-    margin-top:30px;
+.imagemProduto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 531px;
+    height: 521px;
+    background-color: #64CBC7;
+    border-radius: 25px;
+}
+
+.infoProduto{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 651px;
+    max-height: 300px;
+    background-color: #FFF;
+    border-radius: 25px;
+    padding-left: 33px;
+    padding: 45px 0 45px 35px;
+}
+
+.rowNomePreco{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+}
 
-    div.juntatu
-    {
-        margin-left: 30px;
+.infoDireita{
+    h2{
+        max-width: 540px;
+        text-overflow: ellipsis;
+        margin: 0;
+        font-size: 45px;
+        font-weight: bold;
+    }
 
-        div.dados
-        {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            background-color: white;
-            padding-left: 40px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            width: 500px;
-            height: 430px;
-            border-radius: 20px;
+    h3{
+        margin-top: 0;
+        color: #666666;
+        font-size: 30;
+        font-weight: 400;
+    }
 
-            h4
-            {
-                margin-bottom: 5px;
-            }
+    p{
+        color: #666666;
+        font-size: 20px;
+    }
+}
 
-            h4:nth-child(1n){
-                margin-top: 0;
-            }
+.infoEsquerda{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 128px;
+    height: 95px;
+    background-color: #00A59F;
+    border-radius: 24px 0px 0px 24px;
+    justify-content: center;
 
-            h3
-            {
-                margin: 0;
-                font-size: 40px;
-                color: #707070;
-            }
-
-            h2
-            {
-                margin: 0;
-                font-weight: bold;
-            }
-
-            p
-            {
-                margin: 0;
-            }
-
-            button.boto
-            {
-                width:70px;
-                height:40px;
-                margin-right:10px;
-
-                background-color: #E6E6E6;
-                color:#575757;
-                box-shadow: 0px 3px 5px #888888;
-
-                border-radius: 13px;
-                border-style: none;
-                font-family: $fonte;
-                font-size: 14px;
-                font-weight: bold;
-            }
-
-            .qtd{
-                width: 180px;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                input
-                {
-                    width: 30px;
-                    height: 40px;
-                    padding-right: 15px;
-                    padding-left: 15px;
-                    border-radius: $border-radius10;
-                    border: none;
-                    outline: none;
-                    color: black;
-                    font-family: $fonte;
-                    background-color: #F5F5F5;
-                    font-size: 20px;
-                }
-            }
-
-            button.bot
-            {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                width:52px;
-                height:35px;
-
-                background-color: #E6E6E6;
-                color:black;
-                box-shadow: 0px 3px 5px #888888;
-
-                border-radius: 8px;
-                border-style: none;
-                font-family: $fonte;
-                font-size: 45px;
-
-                p
-                {
-                    margin: 0;                    
-                }
-            }
-
-
-
-            div.teste
-            {
-                margin: 0 auto;
-            }
-            button.ad
-            {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 270px;
-                height: 51px;
-                background-color: $ciano;
-                border: none;
-                font-family: $fonte;
-                font-weight: bold;
-                font-size: 20px;
-                color:#fff;
-                border-radius: 13px;
-                box-shadow: 0px 3px 5px #888888;
-
-                p
-                {
-                    margin:0;
-                }
-            }
-        }
-
-        div.imgs
-        {
-            button
-            {
-                border: none;
-                background-color: white;
-                border-radius: 15px;
-                margin-top: 20px;
-                margin-right:15px;
-                
-            }
-            img.teste
-            {
-                width:100px;
-                height:auto;
-                
-            }
+    h3{
+        font-family: 'Montserrat';
+        text-align: center;
+        color: white;
+        font-size: 29px;
+        font-weight: 500;
+        span{
+            font-size: 50px;
         }
     }
 }
 
-div.descricao
+.rowQtdeBotao{
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.widgetQtde{
+    width: 179px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    input{
+        width: 30px;
+        border: none;
+        font-size: 29px;
+        font-weight: bold;
+    }
+    button{
+        display: flex;
+        justify-content: center;
+        padding: 0px;
+        border: none;
+        width: 52px;
+        height: 52px;
+        border-radius: 50%;
+        font-size: 50px;
+        text-align: center;
+    }
+}
+
+
+.btnAddCarrinho{
+    margin-right: 20px;
+    width: 292px;
+    height: 50px;
+    border: none;
+    background-color: #0BBAB3;
+    border-radius: 8px;
+    font-size: 20px;
+    color: #FFF;
+    font-weight: bold;
+}
+
+div.englobar
 {
     margin: 0 auto;
-    width:1120px;
-    height:35px;
-    background-color: white;
-    border-radius: 20px;
-    padding:15px;
-    margin-top:25px;
-
-    p
-    {
-        margin: 0px;
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 65%;
+    height:570px;
+    margin-top:30px;
+    display: flex;
+    flex-direction: row;
 }
 
 
 .recomendados{
     margin: 0 auto;
     width: 1150px;
+    h2{
+        margin-top: 0;
+    }
 }
 
 div.produtos{
-    
-    width: 100%;
-    border-radius: 20px;
     margin: 0 auto;
-    
+    margin-right: -15px;
+    width: 100%;
+    a{
+        color: #000;
+    }
 }
   
-div.produto{
-    
+.produto{
+    margin-right: 15px;
+    width: 205px;
+    height: 279px;
+    background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding-left:20px;
-    margin-left: 10px;
-    background-color: white;
-    border-radius: 10px;
+    border-radius: 20px;
+}
 
-    h4
-    {
-        align-self: flex-end;
-        margin-top: 15px;
-        margin-bottom:0;
-        font-size:17px;
+.fundoIMGProduto{
+    align-self: end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 190px;
+    height: 190px;
+    border-radius: 20px;
+    background-color: #64CBC7;
+
+    img{
+        width: 160px;
+        height: 160px;
+    }
+}
+
+.textoProduto{
+    align-self: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 185px;
+    height: 88px;
+    h4, h5{
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    h4{
+        font-size: 16px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        font-size: 19px;
         font-weight: bold;
     }
 
-    p
-    {
-        margin-top: 5px;
-        margin-bottom:0;
+    h5{
+        font-size: 12px;
     }
-
-    img.teste
-    {
-        width:170px;
-        height:auto;
-        
-    }
-}
-
-div.titulo
-{
-    margin-left:200px;
 }
